# django-static-compress

./: .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: lint.yml  sync-upstream.yml
integration_test/: manage.py
integration_test/statictest/: tests.py
static_compress/: __init__.py  compressors.py  mixin.py  storage.py
test/: test_compressors.py
